--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "types": ["@testing-library/jest-dom"]
+    "jsx": "react-jsx"
   },
   "include": ["src"]
 }
