--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,28 +3,34 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      REACT_APP_API_BASE_URL: ${{ secrets.REACT_APP_API_BASE_URL }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Build and push Docker images
         run: |
           docker buildx create --use
           docker buildx build \
             --push \
-            --cache-from=type=registry,ref=obs-app:cache \
+            --cache-from=type=registry,ref=obs-app-frontend:cache \
             --cache-to=type=inline \
-            --tag ${{ secrets.DOCKERHUB_USERNAME }}/obs-app:latest .
-
+            --build-arg REACT_APP_API_BASE_URL=${{ secrets.REACT_APP_API_BASE_URL }} \
+            --tag ${{ secrets.DOCKERHUB_USERNAME }}/obs-app-frontend:latest \
+            -f Dockerfile.frontend .
+          docker buildx build \
+            --push \
+            --cache-from=type=registry,ref=obs-app-backend:cache \
+            --cache-to=type=inline \
+            --tag ${{ secrets.DOCKERHUB_USERNAME }}/obs-app-backend:latest \
+            -f Dockerfile.backend .
       - name: Deploy to server
         uses: appleboy/ssh-action@master
         with:
@@ -32,25 +38,24 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          envs: REACT_APP_API_BASE_URL
           script: |
             # Clean up resources
             docker system prune -af
-
             # Pull latest from github repo
             cd /home/opc/obs-solution/
             git pull origin master
-
+            # Set environment variable
+            echo "REACT_APP_API_BASE_URL=$REACT_APP_API_BASE_URL" > .env
             # Pull updated images and deploy
             docker compose pull
             docker compose up -d --build
-
             # Check if containers are running
             if ! docker compose ps | grep -q "Up"; then
               echo "Error: Some containers failed to start"
               docker compose logs
               exit 1
             fi
-
       - name: Verify deployment
         uses: appleboy/ssh-action@master
         with:
