--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3005 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node server.js",
-    "dev": "concurrently \"pnpm run server\" \"pnpm run start\""
+    "server": "node server.cjs",
+    "dev": "concurrently \"pnpm run server\" \"pnpm run start\"",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +57,20 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^9.0.1"
-  }
+    "@eslint/js": "^8.56.0",
+    "@types/redux-mock-store": "^1.0.6",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.2.5",
+    "redux-mock-store": "^1.5.4",
+    "typescript-eslint": "^0.0.1-alpha.0"
+  },
+  "type": "module"
 }
